# sudoku-1440

./: README.md  main.py  puzzles.csv  pyproject.toml  speedtest.py  sudoku-1440-2.0.spec  sudoku-speedtest-2.0.spec  sudoku_creator.py  sudoku_solver.py
.github/workflows/: main.yml
libraries/: puzzle.py  puzzle_reader.py  puzzle_two.py  sudoku_creator.py  sudoku_gui.py  sudoku_solver.py
src/sudoku_1440/: main.py  speedtest.py  sudoku_gui.py
