[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku_1440"
version = "3.1.1"
description = "A GUI application for sudoku puzzles"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

dependencies = [
    "Kivy>=2.3.1",
    "lib_sudoku>=2.1.2"
]

[project.scripts]
 sudoku_1440 = "sudoku_1440.main:main"
 sudoku_speedtest = "sudoku_1440.speedtest:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}